[package]
name = "bty"
version = "0.1.0-pre.1"
edition = "2021"
authors = ["Luiz Felipe Gonçalves <luiz@luizfelipe.dev>"]
description = "Streamlined definition and usage of branded types in Rust"
documentation = "https://docs.rs/bty"
repository = "https://github.com/lffg/bty"
categories = ["rust-patterns"]
keywords = ["branded-types", "brand", "type-tag", "tag", "safety"]
license = "MIT"
rust-version = "1.60"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx-core"]
uuid = ["dep:uuid"]

[dependencies]
paste = "1"
serde = { version = "1", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }
sqlx-core = { version = "0.6", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
